--- a/templates/messageView.html
+++ b/templates/messageView.html
@@ -213,16 +213,19 @@
 <div style="background-color:#fff;">   
 
   <section class="content-section text-left">
-
+<div align="right"> <a href="#!/user/profile//"  style="color:##008cc9;  font-weight: bold; margin-right: 130px;">Back</a></div>
     <div class="row">      
 
       <div class="container" style="cursor: pointer;">
 
       <div class="chat_container">
+
          <div class="col-sm-3 chat_sidebar">
+
     	 <div class="row">
             <div id="custom-search-input">
                <div class="input-group col-md-12">
+
                  <!-- <input type="text" class="  search-query form-control" placeholder="Conversation" />
                   <button class="btn btn-danger" type="button">
                   <span class=" glyphicon glyphicon-search"></span>
