--- a/templates/popupnote.html
+++ b/templates/popupnote.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 <div class="modal-header">
-<h3 class="modal-title">Notes<button class="pull-right" type="button" ng-click="close()">x</button></h3>
+<h3 class="modal-title">My Notes<button class="pull-right" type="button" ng-click="close()">x</button></h3>
 
 </div>
 <div class="modal-body">
@@ -72,13 +72,13 @@
                     </ul>
                 </div>                         
      </div>
-     <div class="form-group">
+     <div class="form-group"> 
         
          <div >
              <input type="text" class="form-control" style="border: 1px solid #ccc;" ng-model="text">                  
         </div>                    
      </div>
-     <button class="btn btn-primary pull-right" type="button" ng-click="notePublish(text)" >Publish</button>
+     <button class="btn btn-primary pull-right" type="button" ng-click="notePublish(text)" >Save</button>
      <div style="clear: both;;"></div>
 </div>
 <!-- <div class="modal-footer">
