--- a/templates/postjobView.html
+++ b/templates/postjobView.html
@@ -3,7 +3,10 @@
   {
     margin-bottom:10px;background-color:#ffffff;border:none;padding-bottom:10px;padding-top:10px;
   }
-  p{font-size: 12px !important; color: #666 !important;    margin: 0px !important; line-height: 1;}
+  p{font-size: 12px !important; color: #666 !important;    margin: 0px !important;}
+  p > span {
+    line-height: 1 important;
+  }
  td
  {
 padding:3px 0px;  
