--- a/templates/postjobView.html
+++ b/templates/postjobView.html
@@ -4,12 +4,13 @@
     margin-bottom:10px;background-color:#ffffff;border:none;padding-bottom:10px;padding-top:10px;
   }
   p{font-size: 12px !important; color: #666 !important;    margin: 0px !important;}
-  p > span {
-    line-height: 1 important;
-  }
+   
  td
  {
 padding:3px 0px;  
+ }
+ .MsNormal{
+  line-height: 16px !important; 
  }
 </style>
 <!-- About Section -->
