--- a/templates/postjobView.html
+++ b/templates/postjobView.html
@@ -9,8 +9,8 @@
  {
 padding:3px 0px;  
  }
- .MsNormal{
-  line-height: 16px !important; 
+ .MsoNormal{
+  line-height: 12px !important; 
  }
 </style>
 <!-- About Section -->
