--- a/templates/popupnote.html
+++ b/templates/popupnote.html
@@ -68,7 +68,7 @@
                                 </p>
                             </div>
                         </li> 
-                         <li class="left clearfix" style="width: 100% !important;" ng-if="allnote.length == '0' " >No conversation available.</li>
+                         <li class="left clearfix" style="width: 100% !important;" ng-if="allnote.length == '0' " >No notes available.</li>
                     </ul>
                 </div>                         
      </div>
