--- a/templates/messageCompany.html
+++ b/templates/messageCompany.html
@@ -211,7 +211,7 @@
 <div style="background-color:#fff;">   
 
   <section class="content-section text-left">
-
+<div align="right"> <a ng-click="goback();" style="color:##008cc9;  font-weight: bold; margin-right: 130px;">Back</a></div>
     <div class="row">      
 
       <div class="container" style="cursor: pointer;">
