--- a/templates/posts.html
+++ b/templates/posts.html
@@ -172,7 +172,7 @@ Software Engineer at Karma Strategies -->
 		<img ng-src="upload/{{ProfileInfo.users_profilepic}}" width="50px"  style="cursor: pointer;float:left;"/> </span>
 		<div class="dropdown">
 		  <div class="dropdown-toggle pull-right dot"  data-toggle="dropdown" >...</div>
-		  <span style="float: right;margin-right: 30px;"><!-- {{datalist.lastactivity}} --></span>    
+		  <span style="float: right;margin-right: 30px;">{{datalist.lastactivity}}</span>    
 		  <ul class="dropdown-menu pull-right">
 		    <li><a ng-click="open_notes(datalist.post_id);">Edit</a></li>
 		    <li><a ng-click="deletePost(datalist.post_id);">Delete</a></li>			     
