--- a/templates/postsDetails.html
+++ b/templates/postsDetails.html
@@ -169,7 +169,7 @@ body
 </div>
 </div>
 <div class="top20" ng-if="datalist.post_content != 'undefined' ">	 
-	<div parse-url="props" ng-model="datalist.txtContent"></div>
+	<div parse-url="props" ng-model="datalist.post_content"></div>
 </div>  
 <!-- <div ng-if="datalist.post_filename == '' "  align="center" style="background-image:url(public/images/picture1.jpg);width:100%;height:300px; background-position:center center;max-width:100%;-webkit-background-size: cover;
   -moz-background-size: cover;
