--- a/include/topUser.html
+++ b/include/topUser.html
@@ -46,7 +46,7 @@
           <li ng-if="userInfo_type == '1' && userInfo_companytype == '1' "><a ng-click="manage_location()">Post a Job</a></li>          
           <li ng-if="userInfo_type == '1' "><a href="#!/user/user-job">View Jobs</a></li>
           <li><a ng-click="check_jobinfo('#!/user/gallery');">Gallery</a></li>
-          <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/posts ');">Feeds</a></li>
+          <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/posts');">Feeds</a></li>
           <li ng-if="userInfo_type == '2' "><a ng-click="check_jobinfo('#!/user/postjobview/');">View Jobs</a></li>
           <li><a ng-click="check_jobinfo('#!/user/cng-psw');">Change Password</a></li>
 					<li><a ng-click="logout();">Logout</a></li>
@@ -75,7 +75,7 @@
             <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/followingcompany');" style="color:#FFF;"><img src="public/images/network.png"/></a></span>
              <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/followuser');" style="color:#FFF;"><img src="public/images/network.png"/></a></span>
             </td>
-           <td align="center" width="25%"><a ng-click="check_jobinfo('#!/user/posts');" style="color:#FFF;"><img src="public/images/feed.png"/></a></td>
+           <td align="center" width="25%"><a ng-click="check_jobinfo('#!/user/feedDetails');" style="color:#FFF;"><img src="public/images/feed.png"/></a></td>
            <td align="center" width="25%">
            
             <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;"><img src="public/images/mail.png"/></a></span>
@@ -91,7 +91,7 @@
            </tr>
            <tr >
            <td align="center"><a ng-click="check_jobinfo('#!/user/construction');" style="color:#FFF;">Network</a></td>
-           <td align="center"><a ng-click="check_jobinfo('#!/user/posts');" style="color:#FFF;">Feed</a></td>
+           <td align="center"><a ng-click="check_jobinfo('#!/user/feedDetails');" style="color:#FFF;">Feed</a></td>
 
            <td align="center">
            <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;">Mail</a></span>
