--- a/include/topUser.html
+++ b/include/topUser.html
@@ -72,43 +72,43 @@
            <table style="width:100%;">
            <tr>
            <td align="center" width="25%">
-            <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/followingcompany');" style="color:#FFF;"><img src="public/images/network.png"/></a></span>
-             <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/followuser');" style="color:#FFF;"><img src="public/images/network.png"/></a></span>
+            <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/followingcompany');" style="color:#FFF;cursor: pointer;"><img src="public/images/network.png"/></a></span>
+             <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/followuser');" style="color:#FFF;cursor: pointer;"><img src="public/images/network.png"/></a></span>
             </td>
            <td align="center" width="25%">
-           <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/feedDetails');" style="color:#FFF;"><img src="public/images/feed.png"/></a></span>
+           <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/feedDetails');" style="color:#FFF;cursor: pointer;"><img src="public/images/feed.png"/></a></span>
 
-           <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/feeduserDetails');" style="color:#FFF;"><img src="public/images/feed.png"/></a></span>
+           <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/feeduserDetails');" style="color:#FFF;cursor: pointer;"><img src="public/images/feed.png"/></a></span>
 
            </td>
            <td align="center" width="25%">
            
-            <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;"><img src="public/images/mail.png"/></a></span>
-           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/companyMessage');"  style="color:#FFF;"><img src="public/images/mail.png"/></a></span>
+            <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;cursor: pointer;"><img src="public/images/mail.png"/></a></span>
+           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/companyMessage');"  style="color:#FFF;cursor: pointer;"><img src="public/images/mail.png"/></a></span>
            </td>
            <td align="center" width="25%">
          
 
-           <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/user-job');" style="color:#FFF;">  <img src="public/images/job.png"/></a></span>
-           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/postjobview/');" style="color:#FFF;">  <img src="public/images/job.png"/></a></span>
+           <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/user-job');" style="color:#FFF;cursor: pointer;">  <img src="public/images/job.png"/></a></span>
+           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/postjobview/');" style="color:#FFF;cursor: pointer;">  <img src="public/images/job.png"/></a></span>
            </td>
 
            </tr>
            <tr >
-           <td align="center"><a ng-click="check_jobinfo('#!/user/construction');" style="color:#FFF;">Network</a></td>
-           <td align="center"> <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/feedDetails');" style="color:#FFF;">Feed</a></span>
+           <td align="center"><a ng-click="check_jobinfo('#!/user/construction');" style="color:#FFF;cursor: pointer;">Network</a></td>
+           <td align="center"> <span ng-if="userInfo_type == '1'"><a ng-click="check_jobinfo('#!/user/feedDetails');" style="color:#FFF;cursor: pointer;">Feed</a></span>
 
-           <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/feeduserDetails');" style="color:#FFF;">Feed</a></span>
+           <span ng-if="userInfo_type == '2'"><a ng-click="check_jobinfo('#!/user/feeduserDetails');" style="color:#FFF;cursor: pointer;">Feed</a></span>
 
            </td>
 
            <td align="center">
-           <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;">Mail</a></span>
-           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/companyMessage');" style="color:#FFF;">Mail</a></span>
+           <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/message');" style="color:#FFF;cursor: pointer;">Mail</a></span>
+           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/companyMessage');" style="color:#FFF;cursor: pointer;">Mail</a></span>
            </td>
            <td align="center">
-           <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/user-job');" style="color:#FFF;">Job</a></span>
-           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/postjobview/');" style="color:#FFF;">Job</a></span>
+           <span ng-if="userInfo_type == '1'">  <a ng-click="check_jobinfo('#!/user/user-job');" style="color:#FFF;cursor: pointer;">Job</a></span>
+           <span ng-if="userInfo_type == '2'">  <a ng-click="check_jobinfo('#!/user/postjobview/');" style="color:#FFF; cursor: pointer;">Job</a></span>
            </td>
            
            </tr>
