--- a/templates/follow_user.html
+++ b/templates/follow_user.html
@@ -26,7 +26,7 @@
     
     <li id="following_me_tab" ><a data-toggle="tab" data-target="#following_me">Following Me <span ng-if="show_tab == 'following_me'"  ng-init="click_on_tab('following_me_tab', 'following_me')"></span></a></li>
     
-    <li id="suggested_tab"  ><a data-toggle="tab" data-target="#suggested"> New <span  ng-if="show_tab == 'suggested'"  ng-init="click_on_tab('suggested_tab', 'suggested')"></span> </a></li>
+    <!-- <li id="suggested_tab"  ><a data-toggle="tab" data-target="#suggested"> New <span  ng-if="show_tab == 'suggested'"  ng-init="click_on_tab('suggested_tab', 'suggested')"></span> </a></li> -->
     
   <!--   <li id="notviewed_tab" ><a data-toggle="tab" data-target="#notviewed"> Not Viewed  </a></li>
     <li id="viewed_tab"    ><a data-toggle="tab" data-target="#viewed"> Viewed </a></li> -->
