--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -154,7 +154,7 @@
   padding:300px 0px 50px !important;
   text-align: center;
   color: #fff;
-  background: url(../images/picture2.jpg) no-repeat top center scroll;
+  background: url(../images/back1.jpg) no-repeat top center scroll;
   background-color:#09F;
   -webkit-background-size: cover;
   -moz-background-size: cover;
