Home page design..

--- a/include/header_home.html
+++ b/include/header_home.html
@@ -19,12 +19,12 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-  <li><a class="page-scroll" href="#" style="text-transform:none;">Job Seekers</a></li>
-    <li><a class="page-scroll" href="#" style="text-transform:none;">Employers</a></li>
-      <li><a class="page-scroll" href="#" style="text-transform:none;">About</a></li>
-  <li><a class="page-scroll" href="#" style="text-transform:none;">Sign Up</a></li>
+  <li><a class="page-scroll" href="javascript:void(0);" style="text-transform:none;">Job Seekers</a></li>
+    <li><a class="page-scroll" href="#!/employer-register" style="text-transform:none;">Employers</a></li>
+      <li><a class="page-scroll" href="javascript:void(0);" style="text-transform:none;">About</a></li>
+  <li><a class="page-scroll" href="javascript:void(0);" style="text-transform:none;">Sign Up</a></li>
 <li><a class="page-scroll" href="#!/login" style="text-transform:none;">Login</a></li>
-<li><a class="page-scroll" href="#!/login" style="text-transform:none;">Contact</a></li>
+<li><a class="page-scroll" href="javascript:void(0);" style="text-transform:none;">Contact</a></li>
 
                 </ul>
             </div>
