--- a/templates/home.html
+++ b/templates/home.html
@@ -127,7 +127,7 @@ td
 </tr>
 <tr>
 <td colspan="2" align="center">
- <a href="#"><div class="btn btn-default btn-lg" style="text-transform:none;border-color:#fff; color:#fff;">
+ <a href="javascript:void(0);"><div class="btn btn-default btn-lg" style="text-transform:none;border-color:#fff; color:#fff;">
  See Company Matches</div></a>
 </td>
 </tr>
@@ -159,7 +159,7 @@ WHAT WE DO</h2>
 </tr>
 <tr>
 <td colspan="2" align="center">
- <a href="#"><div class="btn btn-default btn-lg" style="text-transform:none;border-color:#fff; color:#fff;">
+ <a href="javascript:void(0);"><div class="btn btn-default btn-lg" style="text-transform:none;border-color:#fff; color:#fff;">
  Learn more</div></a>
 </td>
 </tr>
