--- a/templates/educate.html
+++ b/templates/educate.html
@@ -93,7 +93,7 @@ td , th
 </section>
 <div class="container table-responsive" >
 
-  <table class="table-bordered">
+  <table class="table-bordered" width="100%">
     <thead>
       <tr>
         <th style="width: 35%;">Degree/ Certification</th>
