--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,11 @@ $('.navbar-collapse ul li a').click(function() {
 });
 </script>
 <style type="text/css">
+.navbar-toggle {
+    padding: 0px 10px!important;
+    margin-top: 0px!important;
+    margin-bottom: 0px!important;
+}
 label {
   display: block;
   padding-left: 15px;
