--- a/templates/profile.html
+++ b/templates/profile.html
@@ -747,6 +747,9 @@
         <div>
           <div class="blue" style="margin-top: 10px;font-weight: bold;"> 
             {{industry.industry_name}}
+            <span ng-if="industry.area.length == '0' " style="font-weight: normal; margin-left: 10px;">
+                <a href="#!/user/industry" style="color: blue;">add experience</a>
+            </span>
            <!--  <span style=" float: right; font-weight: normal;">{{industry.level}}</span> -->
           </div>
           <span ng-repeat="subindustry in industry.area | filter: query | limitTo:subindustryLimit">
