--- a/templates/user_job_match.html
+++ b/templates/user_job_match.html
@@ -288,7 +288,7 @@ Your desired criteria does not pop up as often as others, so we don't currently 
     
     <div id="applied" class="tab-pane fade ">
     <div ng-if="user_applied_jobs_list.length < 1">
-      <p>Nothing to Show</p>
+      <p>You have not applied to any jobs</p> 
     </div>  
         <div class="row"> 
             
