--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,8 @@ td
  </style> 
  <section>
    <div class="blue_space">
-    <div class="row">
+    <div class="row">   
+    <div class="container">
      <div class="col-lg-12 text-center">
 
        <h2 style="text-transform:none;" class="white">HaveItAll is like a dating app for employment.</h2>
@@ -91,11 +92,13 @@ td
        <p style="font-size:24px;" class="white">We'll keep you connected to their relevant jobs, news and meet-ups.</p>
      </div>
    </div>
+</div>
  </div>
 </section>
  <section>
  <div style="background-color:#FFF;">
   <div class="row">
+   <div class="container">
  <div class="col-lg-12 text-center">
     <div align="center"><img src="public/images/img7.jpg" class="img-responsive"></div>
     <duv style="padding-bottom_30px;">
@@ -103,6 +106,7 @@ td
     <div style="color:#0CF">No Resume . No Spam . The Right Connections</div><br/><br/><br/>
     </div>
     </div>
+    </duv>
     </div>
     </div>
     </div>
