--- a/templates/register.html
+++ b/templates/register.html
@@ -164,7 +164,7 @@
 <td>
         <div style="padding-right: 5px;">
           <a style="font-family: 'Arial';" href="https://www.linkedin.com/oauth/v2/authorization?response_type=code&client_id={{linkedinAuthCredentials.client_id}}&redirect_uri={{linkedinAuthCredentials.redirect_uri}}&state={{linkedinAuthCredentials.csrf_token}}&scope={{linkedinAuthCredentials.scopes}}">
-            <img src="public/images/linkedinbtn.png" />  
+            <img src="public/images/linkedinbtn.png" class="img-responsive" />  
           </a>
         </div>
 </td>
